created introduction on index.html, restarted script.js and style.css

--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="style.css" />
-    <title>My Personal Website</title>
+    <title>Me</title>
   </head>
   <body>
     <script src="script.js"></script>
-    <h1>Hello World!</h1>
+    <h1>Hello There</h1>
+    <p>After reading that, you might be thinking "OMG is this a Obi-Wan Kenobi reference!" Well ofcourse it is. There is no better way to introduce my self. I am </p>
+    <h2>Nickita Danilovich</h2>
   </body>
 </html>
