--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <script src="script.js"></script>
     <h1>Hello There</h1>
     <p>After reading that, you might be thinking "OMG is this a Obi-Wan Kenobi reference!" Well ofcourse it is. There is no better way to introduce my self. I am </p>
+    <h2>General Kenobi</h2>
+    <p> Wait, that can't be right. Why dont you click on the name maybe it will change?</p>
     <h2>Nickita Danilovich</h2>
+    <p>That is my name but you might be wondering who am I? Am I a fan of science fiction? Am I a fan of the arts such as music and dance? Or am I somewhat of an athlete 
+        because I love basketball, snowboarding and skateboarding? To be fair, it is a trick question because I am all of those things and many more. </p>
+    <table>
+        <th>Contact Information</th>
+        <tr>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Phone</th>
+        </tr>
+        <tr>
+            <td>Nickita Danilovich</td>
+            <td>Nickitadanilovich@gmail.com</td>
+            <td>(917) 705-0622</td>
+        </tr>
+    </table>
   </body>
 </html>
