Added a button and changed layout on style.css

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <link rel="stylesheet" href="style.css" />
     <title>Me</title>
   </head>
-  <body>
-    <script src="script.js"></script>
+  <body> 
     <h1>Hello There</h1>
-    <img src="./images/light-removebg-preview.png" >
-    <p id="after">After reading that, you might be thinking "OMG is this a Obi-Wan Kenobi reference!" Well ofcourse it is. There is no better way to introduce my self. I am </p>
+    <div id="img" >
+    <img id="light" src="./images/light-removebg-preview.png" >
+    </div>
+    <p id="after">After reading that, you might be thinking "OMG is this a Obi-Wan Kenobi reference!" Well of course it is. There is no better way to introduce my self. I am </p>
     <h2>Nickita Danilovich</h2>
     <p id="who">That is my name but you might be wondering who am I? Am I a fan of science fiction? Am I a fan of the arts such as music and dance? Or am I somewhat of an athlete 
         because I love basketball, snowboarding and skateboarding? To be fair, it is a trick question because I am all of those things and many more. This is my first personal website and hope to have many more.</p>
     <table>
-        <th>Contact Information</th>
         <tr>
             <th>Name</th>
             <th>Email</th>
@@ -25,5 +25,14 @@
             <td>(917) 705-0622</td>
         </tr>
     </table>
+    <div class="original">
+        Hmm, this text is weird, what happens if you hover over it?
+    </div>
+    <div class="hidden">
+        You Have joined The Dark Side!!! MWHAAAHAAA
+    </div>
+    <button id="myBtn">Click here for surprise :)</button>
+    <p id="words"></p>
+    <script src="script.js"></script>
   </body>
 </html>
